--- a/project/Window1.xaml
+++ b/project/Window1.xaml
@@ -8,7 +8,7 @@
         Title="Window1" Height="450" Width="800" WindowStyle="None">
     <Grid>
         <Image HorizontalAlignment="Left" Source="C:\Users\Mateusz\source\repos\project\barca.jpg" Height="120" Margin="39,27,0,0" VerticalAlignment="Top" Width="160"/>
-        
+
         <TextBlock  HorizontalAlignment="Left" Height="195" Margin="39,172,0,0" TextWrapping="Wrap" FontFamily="Comic Sans MS" FontSize="15"  VerticalAlignment="Top" Width="506">Miasto w północno-wschodniej Hiszpanii, nad Morzem Śródziemnym, około 110 km na południe od grzbietu Pirenejów i granicy hiszpańsko-francuskiej. Stolica prowincji o tej samej nazwie oraz wspólnoty autonomicznej Katalonii. Drugie co do wielkości miasto Hiszpanii, z liczbą mieszkańców wynoszącą 1 620 809 wewnątrz centrum administracyjnego. Zespół miejski Barcelony wykracza poza centrum administracyjne, z liczbą ludności wynoszącą 4 588 000, jest piątym co do wielkości zespołem miejskim w Unii Europejskiej. Cała metropolia ma około 5 milionów mieszkańców.</TextBlock>
         <ListBox HorizontalAlignment="Left" FontFamily="Comic Sans MS" FontSize="13" Height="195" Margin="570,172,0,0" VerticalAlignment="Top" Width="184">
             <ListBoxItem Content="Sagrada Familia" />
@@ -23,10 +23,11 @@
         <Button  HorizontalAlignment="Left" Height="43" Margin="681,10,0,0" VerticalAlignment="Top" Width="73" Click="Button_Click">
             <Image Source="C:\Users\Mateusz\source\repos\project\img1.png" Height="33" Width="60" RenderTransformOrigin="0.023,-0.356"/>
         </Button>
-        <Button Content="Dojazd do miasta" HorizontalAlignment="Left" Height="43" Margin="39,372,0,0" VerticalAlignment="Top" Width="160"/>
+        <Button Name ="butt1" Content="Dojazd do miasta" HorizontalAlignment="Left" Height="43" Margin="39,372,0,0" VerticalAlignment="Top" Width="160" PreviewMouseDown="butt1_PreviewMouseDown"/>
         <Button Content="Noclegi" HorizontalAlignment="Left" Height="43" Margin="304,372,0,0" VerticalAlignment="Top" Width="160"/>
         <Button Content="Restauracje" HorizontalAlignment="Left" Height="43" Margin="570,372,0,0" VerticalAlignment="Top" Width="160"/>
-        <TextBox Name="" HorizontalAlignment="Left" FontSize="40"  Height="57" Margin="240,27,0,0" TextWrapping="Wrap" Text="kamil" VerticalAlignment="Top" Width="192"/>
+        <TextBox Name="LAB1" HorizontalAlignment="Left" FontSize="40"  Height="57" Margin="240,27,0,0" TextWrapping="Wrap" Text="Barcelona" VerticalAlignment="Top" Width="192"/>
+        <WebBrowser Name="webBrowser1"  HorizontalAlignment="Left" Height="443" VerticalAlignment="Top" Width="794" Margin="0,0,-0.4,0"/>
 
 
     </Grid>
