--- a/project/Window1.xaml
+++ b/project/Window1.xaml
@@ -24,8 +24,8 @@
             <Image Source="C:\Users\Mateusz\source\repos\project\img1.png" Height="33" Width="60" RenderTransformOrigin="0.023,-0.356"/>
         </Button>
         <Button Name ="butt1" Content="Dojazd do miasta" HorizontalAlignment="Left" Height="43" Margin="39,372,0,0" VerticalAlignment="Top" Width="160" PreviewMouseDown="butt1_PreviewMouseDown"/>
-        <Button Content="Noclegi" HorizontalAlignment="Left" Height="43" Margin="304,372,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Restauracje" HorizontalAlignment="Left" Height="43" Margin="570,372,0,0" VerticalAlignment="Top" Width="160"/>
+        <Button x:Name="butt2" Content="Noclegi" HorizontalAlignment="Left" Height="43" Margin="304,372,0,0" VerticalAlignment="Top" Width="160" PreviewMouseDown="butt2_PreviewMouseDown"/>
+        <Button x:Name="butt3" Content="Restauracje" HorizontalAlignment="Left" Height="43" Margin="570,372,0,0" VerticalAlignment="Top" Width="160" PreviewMouseDown="butt3_PreviewMouseDown"/>
         <TextBox Name="LAB1" HorizontalAlignment="Left" FontSize="40"  Height="57" Margin="240,27,0,0" TextWrapping="Wrap" Text="Barcelona" VerticalAlignment="Top" Width="192"/>
         <WebBrowser Name="webBrowser1"  HorizontalAlignment="Left" Height="416" VerticalAlignment="Top" Width="794" Margin="0,-1,0,0" Visibility="Hidden"/>
         <Button Name="trya" Content="Zamknij" HorizontalAlignment="Left" Margin="644,415,0,0" VerticalAlignment="Top" Width="110" Height="24" PreviewMouseDown="trya_PreviewMouseDown" Visibility="Hidden"/>
