--- a/project/Page1.xaml
+++ b/project/Page1.xaml
@@ -76,6 +76,12 @@
 
 
         </StackPanel>
+        <StackPanel x:Name="par" HorizontalAlignment="Left" Height="90" VerticalAlignment="Top" Width="800"  Margin="0,95,0,0" PreviewMouseDown="par_PreviewMouseDown" >
+            <Image Source="C:\Users\Mateusz\source\repos\project\paryz.jpg" HorizontalAlignment="Left" Height="70" Margin="10,10,0,0" Width="90"/>
+            <Label Content="Paryż" FontSize="25" FontFamily="Comic Sans MS" Height="50" Margin="140,-75,500,0" PreviewKeyDown="Label_PreviewKeyDown"/>
+
+
+        </StackPanel>
 
     </Grid>
 </Page>
